Addressed PR comments and fixed int test